<resources>
    <string name="app_name">Business Card</string>
    <string name="business_card">Business Card</string>
    <string name="add_card">Add a Card</string>
    <string name="close">Close</string>
    <string name="new_business_card">New Business Card</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="color">Color</string>
    <string name="color_hexadecimal">#%1$s</string>
    <string name="color_value">Background color: #%1$s</string>
    <string name="save_card">Save this card</string>
    <string name="save_card_successful">The card has been successfully saved.</string>
    <string name="capture_image_successful">The card has been successfully captured.</string>
    <string name="share">Share</string>
    <string name="are_you_sure_you_want_delete_this_card">Are you sure you want to Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_business_card">Edit Business Card</string>
    <string name="delete_this_business_card">Delete this business card</string>
    <string name="edit_this_card_information">Edit this card information</string>
    <string name="share_this_card">Share this card</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="by">By</string>
    <string name="myname">Derleymad</string>
</resources>