<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren = "false"
    >

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"

            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3.5:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_front"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

            <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Wanderley de Macedo Beserra filho" />

            <TextView
                    android:id="@+id/tv_phone"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    tools:text="(XX) XXXX-XXXX" />

            <TextView
                    android:id="@+id/tv_email"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone"
                    tools:text="email@exemplo.com.br" />

            <TextView
                    android:id="@+id/tv_company"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Wanderley Corporation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:visibility="gone"
                tools:visibility="visible">

            <ImageButton
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete_this_business_card"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="@id/btn_edit"
                    app:layout_constraintEnd_toStartOf="@id/btn_edit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_edit" />

            <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/remove"
                    app:layout_constraintEnd_toEndOf="@id/btn_delete"
                    app:layout_constraintStart_toStartOf="@id/btn_delete"
                    app:layout_constraintTop_toBottomOf="@id/btn_delete" />


            <ImageButton
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit_this_card_information"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />

            <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/edit"
                    app:layout_constraintEnd_toEndOf="@id/btn_edit"
                    app:layout_constraintStart_toStartOf="@id/btn_edit"
                    app:layout_constraintTop_toBottomOf="@id/btn_edit" />

            <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/share_this_card"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="@id/btn_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_edit"
                    app:layout_constraintTop_toTopOf="@id/btn_edit" />

            <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/share"
                    app:layout_constraintEnd_toEndOf="@id/btn_share"
                    app:layout_constraintStart_toStartOf="@id/btn_share"
                    app:layout_constraintTop_toBottomOf="@id/btn_share" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
